2019.7/_sources/plugins/available/alignment/mafft.rst.txt
mafft: De novo multiple sequence alignment with MAFFT
=====================================================


.. raw:: html

   <table class="table action-info">
     <tbody>
       <tr>
         <th scope="row"><p></p>Citations</th>
         <td>

.. bibliography:: alignment:mafft.bib
   :list: bullet
   :all:
   :keyprefix: alignment:mafft:
   :labelprefix: alignment:mafft:

.. raw:: html

         </td>
       </tr>
     </tbody>
   </table>


.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <h4>Docstring:</h4>
         <pre>Usage: qiime alignment mafft [OPTIONS]

     Perform de novo multiple sequence alignment using MAFFT.

   Inputs:
     --i-sequences ARTIFACT FeatureData[Sequence]
                             The sequences to be aligned.              [required]
   Parameters:
     --p-n-threads INTEGER   The number of threads. (Use 0 to automatically use
       Range(0, None)        all available cores)                    [default: 1]
     --p-parttree / --p-no-parttree
                             This flag is required if the number of sequences
                             being aligned are larger than 1000000. Disabled by
                             default                             [default: False]
   Outputs:
     --o-alignment ARTIFACT FeatureData[AlignedSequence]
                             The aligned sequences.                    [required]
   Miscellaneous:
     --output-dir PATH       Output unspecified results to a directory
     --verbose / --quiet     Display verbose output to stdout and/or stderr
                             during execution of this action. Or silence output
                             if execution is successful (silence is golden).
     --citations             Show citations and exit.
     --help                  Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
       <h4>Import:</h4>

.. command-block::
   :no-exec:

   from qiime2.plugins.alignment.methods import mafft

.. raw:: html

       <h4>Docstring:</h4>
         <pre>De novo multiple sequence alignment with MAFFT

   Perform de novo multiple sequence alignment using MAFFT.

   Parameters
   ----------
   sequences : FeatureData[Sequence]
       The sequences to be aligned.
   n_threads : Int % Range(0, None), optional
       The number of threads. (Use 0 to automatically use all available cores)
   parttree : Bool, optional
       This flag is required if the number of sequences being aligned are
       larger than 1000000. Disabled by default

   Returns
   -------
   alignment : FeatureData[AlignedSequence]
       The aligned sequences.</pre>
       </div>
     </div>
   </div>